package com.collegebuddy.domain;

public enum AccountStatus {
    PENDING_VERIFICATION,
    ACTIVE,
    DEACTIVATED
}
