package com.collegebuddy.domain;

public enum Visibility {
    PUBLIC,
    PRIVATE
}
